# atAI

./: Cargo.toml  Makefile  README-zh.md  README.md  install.sh
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
crates/atai-cli/: Cargo.toml
crates/atai-cli/src/: app.rs  cli.rs  lib.rs  main.rs
crates/atai-cli/src/commands/: config.rs  version.rs
crates/atai-core/: Cargo.toml
crates/atai-core/src/: config.rs  executor.rs  history.rs  lib.rs  llm.rs  policy.rs  resources.rs  review.rs
crates/atai-tui/: Cargo.toml
crates/atai-tui/src/: lib.rs
scripts/: @ai
tools/make/: common.mk  rust.mk  tools.mk
