[workspace]
members = ["crates/atai-core", "crates/atai-cli", "crates/atai-tui"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.94.1"
license = "GPL-3.0-only"

[workspace.dependencies]
anyhow = "1.0.100"
async-openai = { version = "0.34.0", features = ["responses"] }
chrono = { version = "0.4.42", features = ["clock", "serde"] }
clap = { version = "4.5.48", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
once_cell = "1.21.3"
ratatui = "0.30.0"
regex = "1.12.2"
reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
toml = "0.9.7"
unicode-width = "0.2.2"
